nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: demo-ingress
  labels:
    env: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    env: dev
