ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx-ingress
  namespace: demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: a0bb3257447ed41deb9599a9c71befa8-51a031e16d9536bf.elb.us-east-2.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
